rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__declare_global_var.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_ok(stringify! (declare_global_var), \"global_var a;\")"
snapshot_kind: text
---
[
    VarScopeDecl(
        VarScopeDecl {
            ident: Ident(
                "a",
            ),
            scope: Global,
        },
    ),
]
