rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__declare_global_vars.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_ok(stringify! (declare_global_vars), \"global_var a, b, c;\")"
---
[
    VarScopeDecl(
        VarScopeDecl {
            idents: [
                Ident(
                    "a",
                ),
                Ident(
                    "b",
                ),
                Ident(
                    "c",
                ),
            ],
            scope: Global,
        },
    ),
]
