rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__declare_local_vars.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_ok(stringify! (declare_local_vars), \"local_var a, b, c;\")"
---
[
    VarScopeDecl(
        VarScopeDecl {
            idents: [
                Ident(
                    "a",
                ),
                Ident(
                    "b",
                ),
                Ident(
                    "c",
                ),
            ],
            scope: Local,
        },
    ),
]
