rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__div.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_ok(stringify! (div), \"a / 1;\")"
---
[
    Stmt(
        ExprStmt(
            Binary(
                Binary {
                    lhs: Atom(
                        Ident(
                            Ident(
                                "a",
                            ),
                        ),
                    ),
                    op: Slash,
                    rhs: Atom(
                        Literal(
                            Number(
                                1,
                            ),
                        ),
                    ),
                },
            ),
        ),
    ),
]
