rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__empty_function_call.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_ok(stringify! (empty_function_call), \"a();\")"
---
[
    ExprStmt(
        Atom(
            FnCall(
                FnCall {
                    fn_expr: Atom(
                        Ident(
                            Ident(
                                "a",
                            ),
                        ),
                    ),
                    args: CommaSeparated {
                        items: [],
                        delimiter: Paren,
                    },
                    num_repeats: None,
                },
            ),
        ),
    ),
]
