rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__empty_program.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_ok(stringify! (empty_program), \"\")"
---
[]
